@@ -1,5 +1,5 @@
+keep_environment = PATH
 exim_path = EXIM_PATH
-keep_environment =
 host_lookup_order = bydns
 spool_directory = DIR/spool
 
